<resources
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="TypographyEllipsis">
    <string name="base_signal" translatable="false">`启q琼</string>
    <string name="base_signal_upper" translatable="false">`启Q琼</string>
    <string name="qq_my_love" translatable="false">琼，我的女神</string>
    <string name="fly_sing_qiong" translatable="false">紛飛，浅唱，瓊</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="more">More</string>
    <string name="after">after</string>
    <string name="at">at</string>
    <string name="congratulations">Congratulations</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>
    <string-array name="time_type">
        <item>@string/minute</item>
        <item>@string/hour</item>
        <item>@string/day</item>
        <item>@string/week</item>
        <item>@string/month</item>
        <item>@string/year</item>
    </string-array>
    <string name="second">Second</string>
    <string name="minute">Minute</string>
    <string name="hour">Hour</string>
    <string name="day">Day</string>
    <string name="week">week</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string-array name="day_of_week">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>
    <string-array name="month_of_year">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <string-array name="time_period">
        <item>before dawn</item>
        <item>in the early morning</item>
        <item>in the morning</item>
        <item>at noon</item>
        <item>in the afternoon</item>
        <item>at dusk</item>
        <item>at night</item>
        <item>deep at night</item>
    </string-array>
    <string name="today">today</string>
    <string name="tomorrow">tomorrow</string>
    <string name="yesterday">yesterday</string>
    <string name="end_of_month">END OF MONTH</string>
    <string name="this_month">this month</string>
    <string name="this_week">this week</string>
    <string name="this_year">this year</string>
    <string name="later">later</string>
    <string name="description_a">a</string>
    <string name="every">&#160;every</string>
    <string name="times">time</string>
    <string name="hours">hour</string>
    <string name="days">day</string>
    <string name="weeks">week</string>
    <string name="months">month</string>
    <string name="from_everything_done">from Android app EverythingDone</string>
    <string name="everythingdone">EverythingDone</string>
    <string name="title_create_thing">Create new thing</string>
    <string name="title_edit_thing">Edit</string>
    <string name="title_activity_things_all">All things</string>
    <string name="image_or_video_attachment">Image or Video Attachment</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_statistic">Statistic</string>
    <string name="title_activity_thing_widget_configure">Select single thing</string>
    <string name="title_activity_things_list_widget_configuration">Select underway things</string>
    <string name="title_widget_things_list">Things list</string>
    <string name="title_widget_thing_1x1">Thing 1x1</string>
    <string name="title_widget_thing_2x2">Thing 2x2</string>
    <string name="title_widget_thing_3x3">Thing 3x3</string>
    <string name="title_widget_thing_4x4">Thing 4x4</string>
    <string name="title_widget_thing_4x2">Thing 4x2</string>
    <string name="title_widget_thing_2x4">Thing 2x4</string>
    <string name="title_widget_thing_4x3">Thing 4x3</string>
    <string name="title_widget_thing_3x4">Thing 3x4</string>
    <string name="title_widget_thing_5x2">Thing 5x2</string>
    <string name="title_widget_thing_2x5">Thing 2x5</string>
    <string name="title_widget_thing_5x3">Thing 5x3</string>
    <string name="title_widget_thing_3x5">Thing 3x5</string>
    <string name="title_widget_thing_5x4">Thing 5x4</string>
    <string name="title_widget_thing_4x5">Thing 4x5</string>
    <string name="title_widget_thing_5x5">Thing 5x5</string>
    <string name="title_widget_thing_6x2">Thing 6x2</string>
    <string name="title_widget_thing_2x6">Thing 2x6</string>
    <string name="title_widget_thing_6x3">Thing 6x3</string>
    <string name="title_widget_thing_3x6">Thing 3x6</string>
    <string name="title_widget_thing_6x4">Thing 6x4</string>
    <string name="title_widget_thing_4x6">Thing 4x6</string>
    <string name="title_widget_thing_6x5">Thing 6x5</string>
    <string name="title_widget_thing_5x6">Thing 5x6</string>
    <string name="title_widget_thing_6x6">Thing 6x6</string>
    <string name="title_widget_things_list_3x3">Things list 3x3</string>
    <string name="title_widget_things_list_4x4">Things list 4x4</string>
    <string name="title_widget_things_list_5x4">Things list 5x4</string>
    <string name="title_widget_things_list_4x5">Things list 4x5</string>
    <string name="title_widget_things_list_5x5">Things list 5x5</string>
    <string name="title_widget_things_list_6x4">Things list 6x4</string>
    <string name="title_widget_things_list_4x6">Things list 4x6</string>
    <string name="title_widget_things_list_6x5">Things list 6x5</string>
    <string name="title_widget_things_list_5x6">Things list 5x6</string>
    <string name="title_widget_things_list_6x6">Things list 6x6</string>
    <string name="title_activity_doing">Currently doing</string>
    <string name="underway">Underway</string>
    <string name="thing">Thing</string>
    <string name="all_things">All things</string>
    <string name="all_content">All content</string>
    <string name="note">Note</string>
    <string name="reminder">Reminder</string>
    <string name="habit">Habit</string>
    <string name="goal">Goal</string>
    <string name="finished">Finished</string>
    <string name="deleted">Deleted</string>
    <string name="drawer_deleted">Deleted</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="private_thing">private thing</string>
    <string name="thing_folder">Thing folder</string>
    <string name="private_thing_folder">private thing folder</string>
    <string name="thing_folder_count">%1$d things</string>
    <string name="thing_folder_count_folders">%1$d folders</string>
    <string name="thing_folder_count_folders_things">%1$d folders, %2$d things</string>
    <string name="cannot_set_as_private_thing_folder_title">Cannot set as private thing folder</string>
    <string name="thing_folder_location">In %1$s</string>
    <string name="create_thing_folder_title">Name folder</string>
    <string name="thing_folder_name_hint">Folder name</string>
    <string name="default_thing_folder_name">New folder</string>
    <string name="rename_thing_folder">Rename folder</string>
    <string name="show_thing_folder_summary">Show summary card</string>
    <string name="show_thing_folder_thumbnails">Show thumbnails</string>
    <string name="make_thing_folder_wide">Make card wide</string>
    <string name="make_thing_folder_normal_width">Use normal width</string>
    <string name="set_thing_folder_private">Set as private folder</string>
    <string name="cancel_thing_folder_private">Cancel private folder</string>
    <string name="act_set_as_private_items">Set selected items as private</string>
    <string name="act_cancel_private_items">Cancel private for selected items</string>
    <string name="dissolve_thing_folder">Dissolve folder</string>
    <string name="dissolve_thing_folder_confirm">Dissolve the selected folder: the folder itself is deleted (it won\'t go to the recycle bin and cannot be restored), and all its contents (%1$s) move up to the parent level, keeping each item\'s own state.</string>
    <string name="folder_count_segment">%1$d subfolder(s)</string>
    <string name="finish_all_things_in_folder">Finish all things in folder</string>
    <string name="restore_all_things_in_folder">Restore all things in folder</string>
    <string name="delete_thing_folder">Delete all things in folder</string>
    <string name="delete_all_things_in_folder_forever">Delete all things in folder forever</string>
    <string name="delete_thing_folder_forever">Delete folder forever</string>
    <string name="move_thing_folder_to">Move to folder</string>
    <string name="act_share">Share</string>
    <string name="act_search">Search</string>
    <string name="act_finish_all">Finish all things</string>
    <string name="act_clear_now">Clear</string>
    <string name="act_sort_by_alarm">Sort by alarm time</string>
    <string name="act_select_all">Select all</string>
    <string name="act_delete_selected">Delete selected</string>
    <string name="act_finish_selected">Finish selected</string>
    <string name="act_export_to_sdcard">Export to sdcard</string>
    <string name="act_move_to_thing_folder">Move to folder</string>
    <string name="act_restore_selected">Restore selected</string>
    <string name="act_delete_selected_forever">Delete selected forever</string>
    <string name="act_customize_card_appearance">Adjust thing appearance</string>
    <string name="act_sticky_on_top">Sticky on top</string>
    <string name="act_add_attachment">Add attachment</string>
    <string name="act_enable_check_list">Enable checklist</string>
    <string name="act_change_background">Adjust color</string>
    <string name="act_undo">Undo</string>
    <string name="act_redo">Redo</string>
    <string name="act_abandon_new_thing">Abandon</string>
    <string name="act_set_as_private_thing">Set As Private Thing</string>
    <string name="act_set_thing_as_ongoing">Show in Notifications</string>
    <string name="act_finish">Finish</string>
    <string name="act_delete">Delete</string>
    <string name="act_pause_habit">Pause habit\'s reminders</string>
    <string name="act_check_habit_detail">Check habit detail</string>
    <string name="act_finish_this_time_habit">Finish this time</string>
    <string name="act_habit_developed">I\'ve developed this habit</string>
    <string name="act_restore">Restore</string>
    <string name="act_copy_content">Copy content</string>
    <string name="act_show_attachment_info">Check Attachment Detail</string>
    <string name="act_delete_attachment">Delete this attachment</string>
    <string name="act_check_update_habit_record"><![CDATA[Check&Update Habit records]]></string>
    <string name="act_shortcut_check_upcoming">Upcoming thing</string>
    <string name="act_shortcut_check_sticky">Top sticky thing</string>
    <string name="cd_image_attachment">image attachment</string>
    <string name="cd_video_attachment">video attachment</string>
    <string name="cd_motion_photo">Motion photo. Press and hold to play.</string>
    <string name="cd_delete_image_attachment">delete this image attachment</string>
    <string name="cd_edit_image_attachment_appearance">edit this image attachment appearance</string>
    <string name="hdr_badge_text" translatable="false">HDR</string>
    <string name="media_badge_gif" translatable="false">GIF</string>
    <string name="act_spatial_photo">Spatial photo effect</string>
    <string name="act_regenerate_spatial_photo">Regenerate spatial effect</string>
    <string name="act_remove_spatial_photo">Remove spatial effect</string>
</resources>