<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.ywwynm.everythingdone.activities.DetailActivity"
      tools:ignore="AlwaysShowAction">

    <item
        android:id="@+id/act_add_attachment"
        android:icon="@drawable/act_add_attachment"
        android:title="@string/act_add_attachment"
        app:showAsAction="always"/>

    <item
        android:id="@+id/act_check_list"
        android:icon="@drawable/act_enable_check_list"
        android:title="@string/act_enable_check_list"
        app:showAsAction="always"/>

    <item
        android:id="@+id/act_change_color"
        android:icon="@drawable/act_change_color"
        android:title="@string/act_change_background"
        app:showAsAction="always"/>

    <item
        android:id="@+id/act_set_as_private_thing"
        android:title="@string/act_set_as_private_thing"
        app:showAsAction="never"/>

    <item
        android:id="@+id/act_sticky"
        android:title="@string/act_sticky_on_top"
        app:showAsAction="never" />

    <item
        android:id="@+id/act_ongoing_thing"
        android:title="@string/act_set_thing_as_ongoing"
        app:showAsAction="never"/>

    <item
        android:id="@+id/act_undo"
        android:title="@string/act_undo"
        app:showAsAction="never"/>

    <item
        android:id="@+id/act_redo"
        android:title="@string/act_redo"
        app:showAsAction="never"/>

    <item
        android:id="@+id/act_pause_resume_habit"
        android:title="@string/act_pause_habit"
        app:showAsAction="never"/>

    <item
        android:id="@+id/act_check_habit_detail"
        android:title="@string/act_check_habit_detail"
        app:showAsAction="never"/>

    <item
        android:id="@+id/act_check_update_habit_record"
        android:title="@string/act_check_update_habit_record"
        app:showAsAction="never"/>

    <item
        android:id="@+id/act_share"
        android:title="@string/act_share"
        app:showAsAction="never"/>

    <item
        android:id="@+id/act_finish_this_time_habit"
        android:title="@string/act_finish_this_time_habit"
        app:showAsAction="never"/>

    <item
        android:id="@+id/act_finish"
        android:title="@string/act_habit_developed"
        app:showAsAction="never"/>

    <item
        android:id="@+id/act_delete"
        android:title="@string/act_delete"
        app:showAsAction="never"/>

    <item
        android:id="@+id/act_copy_content"
        android:title="@string/act_copy_content"
        app:showAsAction="never"/>

    <item
        android:id="@+id/act_export"
        android:title="@string/act_export_to_sdcard"
        app:showAsAction="never"/>

</menu>
