<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:ignore="AlwaysShowAction">

    <item
        android:id="@+id/act_select_all"
        android:title="@string/act_select_all"
        android:icon="@drawable/act_select_all"
        app:showAsAction="always"/>

    <item
        android:id="@+id/act_restore_selected"
        android:title="@string/act_restore_selected"
        android:icon="@drawable/act_restore_all"
        app:showAsAction="always"/>

    <item
        android:id="@+id/act_delete_selected"
        android:title="@string/act_delete_selected"
        android:icon="@drawable/act_delete_all"
        app:showAsAction="always"/>

    <item
        android:id="@+id/act_customize_card_appearance"
        android:title="@string/act_customize_card_appearance"
        android:icon="@drawable/act_adjust_card_appearance"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/act_set_as_private_thing"
        android:title="@string/act_set_as_private_thing"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/act_dissolve_thing_folder"
        android:title="@string/dissolve_thing_folder"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/act_delete_thing_folder"
        android:title="@string/delete_thing_folder"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/act_export"
        android:title="@string/act_export_to_sdcard"
        app:showAsAction="never" />

</menu>
