<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:ignore="AlwaysShowAction">

    <item
        android:id="@+id/act_search"
        android:title="@string/act_search"
        android:icon="@drawable/act_search"
        app:showAsAction="always"/>

    <item
        android:id="@+id/act_delete_all_forever"
        android:title="@string/act_clear_now"
        android:icon="@drawable/act_delete_forever"
        app:showAsAction="always"/>

    <item
        android:id="@+id/act_toggle_current_folder_private"
        android:title="@string/set_thing_folder_private"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/act_move_current_folder_to_folder"
        android:title="@string/move_thing_folder_to"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/act_dissolve_current_folder"
        android:title="@string/dissolve_thing_folder"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/act_delete_current_folder"
        android:title="@string/delete_thing_folder_forever"
        android:visible="false"
        app:showAsAction="never" />

</menu>
