<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.ywwynm.everythingdone.activities.ThingsActivity"
      tools:ignore="AlwaysShowAction">

      <item
          android:id="@+id/act_search"
          android:title="@string/act_search"
          android:icon="@drawable/act_search"
          app:showAsAction="always"/>

      <item
          android:id="@+id/act_finish_all"
          android:title="@string/act_finish_all"
          android:icon="@drawable/act_finish_all"
          app:showAsAction="always"/>

      <item
          android:id="@+id/act_sort_by_alarm"
          android:title="@string/act_sort_by_alarm"
          android:icon="@drawable/act_sort_by_alarm"
          app:showAsAction="always"/>

      <item
          android:id="@+id/act_toggle_current_folder_private"
          android:title="@string/set_thing_folder_private"
          android:visible="false"
          app:showAsAction="never" />

      <item
          android:id="@+id/act_dissolve_current_folder"
          android:title="@string/dissolve_thing_folder"
          android:visible="false"
          app:showAsAction="never" />

      <item
          android:id="@+id/act_delete_current_folder"
          android:title="@string/delete_thing_folder"
          android:visible="false"
          app:showAsAction="never" />

</menu>
