<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/drawer_group_scope">
        <item
            android:id="@+id/drawer_all_things"
            android:title="@string/all_things"
            android:orderInCategory="0"
            android:icon="@drawable/drawer_all"/>
    </group>

    <group
        android:id="@+id/drawer_group_things_other">
        <item
            android:id="@+id/drawer_deleted"
            android:title="@string/drawer_deleted"
            android:orderInCategory="2001"
            android:icon="@drawable/drawer_deleted"/>
    </group>

    <group
        android:id="@+id/drawer_group_app_items">
        <item
            android:id="@+id/drawer_settings"
            android:title="@string/settings"
            android:orderInCategory="3000"
            android:icon="@drawable/drawer_settings"/>

        <item
            android:id="@+id/drawer_help"
            android:title="@string/help"
            android:orderInCategory="3001"
            android:icon="@drawable/drawer_help"/>
        <item
            android:id="@+id/drawer_about"
            android:title="@string/about"
            android:orderInCategory="3002"
            android:icon="@drawable/drawer_about"/>
    </group>

</menu>
