<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">

    <shortcut
        android:shortcutId="create new thing"
        android:enabled="true"
        android:icon="@drawable/shortcut_create"
        android:shortcutShortLabel="@string/title_create_thing"
        android:shortcutLongLabel="@string/title_create_thing">
        <intent
            android:action="com.ywwynm.everythingdone.action.shortcut.create"
            android:targetPackage="com.ywwynm.everythingdone"
            android:targetClass="com.ywwynm.everythingdone.activities.ShortcutActivity" />
    </shortcut>

    <shortcut
        android:shortcutId="Upcoming thing"
        android:enabled="true"
        android:icon="@drawable/shortcut_check_upcoming"
        android:shortcutShortLabel="@string/act_shortcut_check_upcoming"
        android:shortcutLongLabel="@string/act_shortcut_check_upcoming">
        <intent
            android:action="com.ywwynm.everythingdone.action.shortcut.check_upcoming"
            android:targetPackage="com.ywwynm.everythingdone"
            android:targetClass="com.ywwynm.everythingdone.activities.ShortcutActivity" />
    </shortcut>

    <shortcut
        android:shortcutId="check sticky thing"
        android:enabled="true"
        android:icon="@drawable/shortcut_check_sticky"
        android:shortcutShortLabel="@string/act_shortcut_check_sticky"
        android:shortcutLongLabel="@string/act_shortcut_check_sticky">
        <intent
            android:action="com.ywwynm.everythingdone.action.shortcut.check_sticky"
            android:targetPackage="com.ywwynm.everythingdone"
            android:targetClass="com.ywwynm.everythingdone.activities.ShortcutActivity" />
    </shortcut>

</shortcuts>